Header footer contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -7,7 +7,7 @@ layout: page
          <div class="container">
             <div class="row align-items-center">
                <div class="col-md-6 col-sm-12">
-                  <h1 class="title">Contact Us</h1>
+                  <h1 class="title">Get Demo</h1>
                </div>
                <div class="col-md-6 col-sm-12 text-right">
                   <ul>
@@ -77,20 +77,20 @@ layout: page
                               <ul class="iq-contact text-white">
                                  <li>
                                     <i class="fas fa-phone"></i>
-                                    <p>+0123 456 789</p>
+                                    <p>+91-8800156160</p>
                                  </li>
                                  <li>
                                     <i class="fas fa-envelope"></i>
-                                    <p>xyz@gmail.com</p>
+                                    <p>contact@limechat.ai</p>
                                  </li>
                                  <li>
                                     <i class="fas fa-map-marker-alt"></i>
-                                    <p>Carol J. Stephens 1635 Franklin, Montgomery, AL 36104 USA</p>
+                                    <p>91 Springboard, Sector 44, Gurgaon, Haryana, India-122003</p>
                                  </li>
                               </ul>
                            </div>
                            <div class="col-sm-12">
-                              <iframe class="w-100 mt-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.840289118572!2d144.95373631550405!3d-37.81720974201396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sin!4v1543402448828" style="border:0" allowfullscreen></iframe>
+                              <iframe class="w-100 mt-3" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14031.980943989554!2d77.0753357!3d28.44956!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfe9158c05b779b08!2s91springboard%20Sector%2044%20Gurgaon!5e0!3m2!1sen!2sin!4v1607783569362!5m2!1sen!2sin" style="border:0" allowfullscreen></iframe>
                            </div>
                         </div>
                      </div>
