FAQ tnc tos footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -76,21 +76,13 @@ layout: page
                            <div class="col-sm-12">
                               <ul class="iq-contact text-white">
                                  <li>
-                                    <i class="fas fa-phone"></i>
-                                    <p>+91-8800156160</p>
-                                 </li>
-                                 <li>
                                     <i class="fas fa-envelope"></i>
                                     <p>contact@limechat.ai</p>
-                                 </li>
-                                 <li>
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    <p>91 Springboard, Sector 44, Gurgaon, Haryana, India-122003</p>
                                  </li>
                               </ul>
                            </div>
                            <div class="col-sm-12">
-                              <iframe class="w-100 mt-3" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14031.980943989554!2d77.0753357!3d28.44956!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfe9158c05b779b08!2s91springboard%20Sector%2044%20Gurgaon!5e0!3m2!1sen!2sin!4v1607783569362!5m2!1sen!2sin" style="border:0" allowfullscreen></iframe>
+                              <img src="images/contact/demo.svg" style="width: 100%;">
                            </div>
                         </div>
                      </div>
