--- a/index.html
+++ b/index.html
@@ -35,9 +35,22 @@ layout: page
 <!--=================================
          MAIN CONTENT -->
 <div class="main-content">
-   <section class="companies">
-      <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div>
-   </section>
+    <section class="companies">
+        <div class="text-center">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        </div>
+        <div class="company-images">
+            <img src="images/clients/1.png">
+            <img src="images/clients/2.webp">
+            <img src="images/clients/3.png" style="background-color: grey;">
+            <img src="images/clients/4.png">
+            <img src="images/clients/5.png">
+            <img src="images/clients/6.jpg">
+            <img src="images/clients/7.webp">
+        </div>
+
+      <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
+    </section>
     <!--=================================
             How it Works -->
     <section class="iq-works mt-3">
@@ -208,3 +221,25 @@ layout: page
 </div>
 <!--=================================
          MAIN CONTENT -->
+
+
+<style type="text/css">
+    .company-images{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .company-images img{
+        height: 80px;
+        padding: 15px;
+        filter: grayscale(100%);
+    }
+    .company-images img:hover{
+        filter: grayscale(0%);
+        cursor: pointer;
+    }
+</style>
