Added team images

--- a/about-us.html
+++ b/about-us.html
@@ -86,8 +86,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-1.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-1hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/nikhil.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/nikhil.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Peter Deo</h5>
@@ -98,8 +98,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-2.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-2hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/aniket.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/aniket.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Rose Parker</h5>
@@ -110,8 +110,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-3.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-3hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/siddharth.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/siddharth.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Jack White</h5>
@@ -122,8 +122,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-4.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-4hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/samveed.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/samveed.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Black John</h5>
@@ -134,8 +134,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-3.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-3hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/akash.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/akash.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Hulk Man</h5>
@@ -146,8 +146,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-4.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-4hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/vishal.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/vishal.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Nick Jorden</h5>
@@ -158,8 +158,8 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-1.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-1hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/parin.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/parin.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Pepper Fury</h5>
@@ -170,8 +170,44 @@ layout: page
                               <div class="col-lg-3 col-sm-6">
                                  <div class="team-box mt-5">
                                     <div class="team-img position-relative">
-                                       <img class="img-fluid team-1" src="images/team/team-2.jpg" alt="">
-                                       <img class="img-fluid team-2" src="images/team/team-2hover.jpg" alt="">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/abhishek.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/abhishek.png" alt="">
+                                    </div>
+                                    <div class="mt-3 text-center">
+                                       <h5 class="title">Rose Parker</h5>
+                                       <p>CEO-Vizion</p>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="col-lg-3 col-sm-6">
+                                 <div class="team-box mt-5">
+                                    <div class="team-img position-relative">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/kishan.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/kishan.png" alt="">
+                                    </div>
+                                    <div class="mt-3 text-center">
+                                       <h5 class="title">Rose Parker</h5>
+                                       <p>CEO-Vizion</p>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="col-lg-3 col-sm-6">
+                                 <div class="team-box mt-5">
+                                    <div class="team-img position-relative">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/amarjeet.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/amarjeet.png" alt="">
+                                    </div>
+                                    <div class="mt-3 text-center">
+                                       <h5 class="title">Rose Parker</h5>
+                                       <p>CEO-Vizion</p>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="col-lg-3 col-sm-6">
+                                 <div class="team-box mt-5">
+                                    <div class="team-img position-relative">
+                                       <img class="img-fluid team-1" src="https://ik.imagekit.io/m52sq26n4h/team_images/prayush.png" alt="">
+                                       <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/prayush.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
                                        <h5 class="title">Rose Parker</h5>
