--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@ layout: page
          MAIN CONTENT -->
 <div class="main-content">
     <section class="companies">
-        <div class="text-center">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        <div class="row justify-content-md-center">
+            <div class="col-lg-8 col-sm-12 text-center">
+                <div class="title-box">
+                    <h2 class="title text-dark">Join our growing <span>D2C Family</span></h2>
+                </div>
+            </div>
         </div>
         <div class="company-images">
             <img src="images/clients/1.png">
             <img src="images/clients/2.webp">
-            <img src="images/clients/3.png" style="background-color: grey;">
-            <img src="images/clients/4.png">
-            <img src="images/clients/5.png">
+            <img src="images/clients/3.png" class="image-black">
+            <img src="images/clients/4.png" class="image-black">
+            <img src="images/clients/5.png" class="image-black">
             <img src="images/clients/6.jpg">
-            <img src="images/clients/7.webp">
+            <img src="images/clients/7.webp" class="image-black">
         </div>
 
       <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
@@ -232,14 +236,22 @@ layout: page
         max-width: 1200px;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 40px;
+        margin-bottom: -20px;
     }
     .company-images img{
-        height: 80px;
+        height: 85px;
         padding: 15px;
         filter: grayscale(100%);
+        opacity: .8;
+        padding-right: 60px;
+    }
+    .company-images .image-black {
+        opacity: .5;
     }
     .company-images img:hover{
         filter: grayscale(0%);
         cursor: pointer;
+        opacity: 1;
     }
 </style>
