Added channel and integrations

--- a/features.html
+++ b/features.html
@@ -83,6 +83,30 @@ layout: page
                      <img class="img-fluid top-img1 w-100" src="images/works/screen-1.png" alt="image">
                   </div>
                </div>
+               <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center mt-5">
+                     <div class="title-box">
+                        <h2 class="title text-dark">We connect with your <span>Favorite Channels</span></h2>
+                     </div>
+                  </div>
+               </div>
+               <div class="row justify-content-md-center">
+                  <div class="col-lg-12 col-md-12 mt-5 mb-5">
+                     <img class="img-fluid top-img1 w-50" src="images/works/channels.png" alt="image">
+                  </div>
+               </div>
+               <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center mt-5">
+                     <div class="title-box">
+                        <h2 class="title text-dark">We integrate with <span>Everyone</span></h2>
+                     </div>
+                  </div>
+               </div>
+               <div class="row justify-content-md-center">
+                  <div class="col-lg-12 col-md-12 mt-5">
+                     <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
+                  </div>
+               </div>
             </div>
          </section>
          <!--=================================
