--- a/features.html
+++ b/features.html
@@ -103,7 +103,7 @@ layout: page
                   </div>
                </div>
                <div class="row justify-content-md-center">
-                  <div class="col-lg-12 col-md-12 mt-5">
+                  <div class="col-lg-12 col-md-12 mt-5 text-center">
                      <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
                   </div>
                </div>
