--- a/features.html
+++ b/features.html
@@ -91,7 +91,7 @@ layout: page
                   </div>
                </div>
                <div class="row justify-content-md-center">
-                  <div class="col-lg-12 col-md-12 mt-5 mb-5">
+                  <div class="col-lg-12 col-md-12 mt-5 mb-5 text-center">
                      <img class="img-fluid top-img1 w-50" src="images/works/channels.png" alt="image">
                   </div>
                </div>
