Added functionality to change feature images based on circle click.

--- a/features.html
+++ b/features.html
@@ -113,7 +113,7 @@ layout: page
                      </div>
                   </div>
                   <div class="col-lg-6 col-md-12 text-center">
-                     <img class="img-fluid top-img1" src="images/works/screen-1.png" alt="image"> 
+                     <img class="img-fluid feature-image" src="images/features/feature-1.png" alt="image"> 
                   </div>
                </div>
             </div>
