--- a/index.html
+++ b/index.html
@@ -225,6 +225,28 @@ layout: page
     </section>
     <!--=================================
             Clients -->
+
+    <section class="companies">
+        <div class="row justify-content-md-center">
+            <div class="col-lg-8 col-sm-12 text-center">
+                <div class="title-box">
+                    <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
+                    <p class="mt-2">Get in touch or create an account.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-lg-8 col-sm-12 text-center">
+                <div>
+                    <a class="button" href="contact-us.html">Request a demo</a>
+                </div>
+            </div>
+        </div>
+        
+
+      <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
+    </section>
+
 </div>
 <!--=================================
          MAIN CONTENT -->
