Finished features page.

--- a/features.html
+++ b/features.html
@@ -34,7 +34,7 @@ layout: page
                         <h1 class="title text-dark">Get Those Window Shoppers Interested</h1>
                      </div>
                      <p class="mt-4">Get 18% more online conversions</p>
-                     <button class="button">Get Demo</button>
+                     <a class="button grey mt-2" href="#" role="button">Get Demo</a>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
                      <img class="img-fluid top-img1 w-100" src="images/works/screen-1.png" alt="image">
@@ -155,12 +155,12 @@ layout: page
                </div>
             </div>
             <div class="container">
-               <div class="features-call-to-action">
+               <div class="features-call-to-action mb-5">
                   <h1>Ready to get started?</h1>
                   <p class="mt-2">Get in touch or create an account</p>
-                  <div class="row mt-5">
-                     <div class="col"><button class="button button-request-demo">Request a Demo</button></div>
-                     <div class="col"><button class="button button-buy-now">Buy Now</button></div>
+                  <div class="row mt-4">
+                     <div class="col"><a class="button grey mt-2" href="#" role="button">Request a Demo</a></div>
+                     <div class="col"><a class="button grey mt-2" href="#" role="button">Buy Now</a></div>
                   </div>
                </div>
                <div class="row justify-content-md-center">
