Added chat widget and images

--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@ layout: page
                                  <p class="mt-4">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
                               </div>
                               <div class="col-lg-6 col-md-12 r-mt3">
-                                 <img class="img-fluid" src="images/about/about-img.gif" alt="image">
+                                 <img class="img-fluid" src="images/about/1.svg" alt="image">
                               </div>
                            </div>
                            <div class="row">
