--- a/features.html
+++ b/features.html
@@ -83,14 +83,12 @@ layout: page
                      <img class="img-fluid top-img1 w-100" src="images/works/screen-1.png" alt="image">
                   </div>
                </div>
-               <div class="row justify-content-md-center">
-                  <div class="col-lg-8 col-sm-12 text-center mt-5">
+               <div class="row justify-content-md-center mb-3">
+                  <div class="col-lg-9 col-sm-12 text-center mt-5">
                      <div class="title-box">
-                        <h2 class="title text-dark">We connect with your <span>Favorite Channels</span></h2>
+                        <h2 class="title text-dark">We Connect with your <span>Favorite Channels</span></h2>
                      </div>
                   </div>
-               </div>
-               <div class="row justify-content-md-center">
                   <div class="col-lg-12 col-md-12 mt-5 mb-5 text-center">
                      <img class="img-fluid top-img1 w-50" src="images/works/channels.png" alt="image">
                   </div>
@@ -98,17 +96,39 @@ layout: page
                <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center mt-5">
                      <div class="title-box">
-                        <h2 class="title text-dark">We integrate with <span>Everyone</span></h2>
+                        <h2 class="title text-dark">And Integrate with <span>Everyone</span></h2>
                      </div>
                   </div>
-               </div>
-               <div class="row justify-content-md-center">
                   <div class="col-lg-12 col-md-12 mt-5 text-center">
                      <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
+                  </div>
+                  <div class="title-box mt-3">
+                     <h3 class="title-light text-dark">along with so <span> many more!</span></h3>
                   </div>
                </div>
             </div>
          </section>
+         <section class="companies">
+              <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center">
+                      <div class="title-box">
+                          <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
+                          <p class="mt-2">Get in touch or create an account.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center">
+                      <div>
+                          <a class="button" href="contact-us.html">Request a demo</a>
+                      </div>
+                  </div>
+              </div>
+              
+
+            <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
+          </section>
+
          <!--=================================
             Features -->
       </div>
