Cleaned up features page

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ layout: page
 
 <style type="text/css">
     .dashboard-img {
-        box-shadow: 0px 0px 10px 10px #6BAC1B;
+        box-shadow: 0px 0px 10px 10px #6BAC1B88;
     }
     .company-white {
         opacity: .5;
