--- a/features.html
+++ b/features.html
@@ -37,7 +37,7 @@ layout: page
                      <a class="button grey mt-2" href="#" role="button">Get Demo</a>
                   </div>
                   <div class="col-lg-6 col-md-12 mt-5">
-                     <img class="img-fluid top-img1 w-100" src="images/works/screen-1.png" alt="image">
+                     <img class="img-fluid top-img1 w-100" src="images/features/1.svg" alt="image">
                   </div>
                </div>
                <div class="row align-items-center features-chatbot mt-5">
@@ -49,7 +49,7 @@ layout: page
                   </div>
                </div>
                <div class="row align-items-center">
-                  <div class="col-lg-6 col-md-12">
+                  <div class="col-lg-5 col-md-12">
                      <div class="holderCircle">
                         <div class="round"></div>
                         <div class="dotCircle">
@@ -112,11 +112,12 @@ layout: page
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-6 col-md-12 text-center">
-                     <img class="img-fluid feature-image" src="images/features/feature-1.png" alt="image"> 
+                  <div class="col-lg-7 col-md-12 text-center">
+                     <img class="img-fluid feature-image" src="https://ik.imagekit.io/m52sq26n4h/services/insightful-cross-selling.png" alt="image"> 
                   </div>
                </div>
             </div>
+         <section class="half-margin">
             <div class="features-projects-completed mt-5">
                <h1>Over 9000 Projects Completed</h1>
                <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -135,34 +136,9 @@ layout: page
                   </div>
                </div>
             </div>
+         </section>
+         <section>
             <div class="container">
-               <div class="features-connections mt-5">
-                  <h1>Connections made easy</h1>
-                  <h3>Reach your users on the channel of your choice</h3>
-                  <img class="img-fluid top-img1 mt-3" src="images/works/screen-1.png" alt="image">
-               </div>
-            </div>
-            <div class="container">
-               <div class="row features-integrations mt-5">
-                  <div class="col-lg-6 col-md-12 mt-5">
-                     <img class="img-fluid top-img1 mt-3" src="images/works/screen-1.png" alt="image">
-                  </div>
-                  <div class="col-lg-6 col-md-12 mt-5 features-integrations-text">
-                     <h1>One minute integrations</h1>
-                     <p>Get setup in 30 minutes or less. Our plug-n-play integrations make it simple to connect your channels and data sources so you can get going in minutes.</p>
-                     <a href="#">Get started <a href="#"><i class="fa fa-long-arrow-alt-right"></i></a></a>
-                  </div>
-               </div>
-            </div>
-            <div class="container">
-               <div class="features-call-to-action mb-5">
-                  <h1>Ready to get started?</h1>
-                  <p class="mt-2">Get in touch or create an account</p>
-                  <div class="row mt-4">
-                     <div class="col"><a class="button grey mt-2" href="#" role="button">Request a Demo</a></div>
-                     <div class="col"><a class="button grey mt-2" href="#" role="button">Buy Now</a></div>
-                  </div>
-               </div>
                <div class="row justify-content-md-center mb-3">
                   <div class="col-lg-9 col-sm-12 text-center mt-5">
                      <div class="title-box">
