Created seperate feature pages

--- a/support.html
+++ b/support.html
@@ -7,12 +7,12 @@ layout: page
          <div class="container">
             <div class="row align-items-center">
                <div class="col-md-6 col-sm-12">
-                  <h1 class="title">Support</h1>
+                  <h1 class="title">Customer Support</h1>
                </div>
                <div class="col-md-6 col-sm-12 text-right">
                   <ul>
                      <li class="d-inline"><a href="index.html">Home</a></li>
-                     <li class="d-inline active">Support</li>
+                     <li class="d-inline active">Customer Support</li>
                   </ul>
                </div>
             </div>
@@ -25,69 +25,169 @@ layout: page
          MAIN CONTENT -->
       <div class="main-content">
          <!--=================================
-            Support -->
-         <section class="support">
+            Features -->
+         <section>
             <div class="container">
-               <div class="row justify-content-center">
-                  <div class="col-sm-8 text-center">
+               <div class="row align-items-center features-demo">
+                  <div class="col-lg-6 col-md-12 mt-5">
                      <div class="title-box">
-                        <h2 class="title text-dark">Welcome to <span>Chatbot Support</span></h2>
+                        <h2 class="title text-dark">Deliver <span>Delightful</span> Customer Experiences</h2>
                      </div>
+                     <p class="mt-4">Reduce Support Cost by 50%</p>
+                     <a class="button grey mt-2" href="#" role="button">Get Demo</a>
+                  </div>
+                  <div class="col-lg-6 col-md-12 mt-5">
+                     <img class="img-fluid top-img1 w-100" src="images/features/2.svg" alt="image">
                   </div>
                </div>
-               <div class="row justify-content-center">
-                  <div class="col-sm-8 text-center">
-                     <form class="form-inline justify-content-center mt-4">
-                        <div class="form-group mb-2">
-                           <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Search Support">
+               <div class="row align-items-center features-chatbot mt-5">
+                  <div class="col-12 order-lg-2 order-2 mt-5 pt-5">
+                     <div class="title-box">
+                        <h2 class="title-light text-dark">The Best Way to know What They Want is <span>Through a Chatbot.</span></h2>
+                     </div>
+                     <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                  </div>
+               </div>
+               <div class="row align-items-center">
+                  <div class="col-lg-5 col-md-12">
+                     <div class="holderCircle">
+                        <div class="round"></div>
+                        <div class="dotCircle">
+                           <span class="itemDot active itemDot1" data-tab="1">
+                           <i class="ion-ios-timer-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
+                           <span class="itemDot itemDot2" data-tab="2">
+                           <i class="ion-ios-chatboxes-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
+                           <span class="itemDot itemDot3" data-tab="3">
+                           <i class="ion-ios-person-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
+                           <span class="itemDot itemDot4" data-tab="4">
+                           <i class="ion-ios-pricetags-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
+                           <span class="itemDot itemDot5" data-tab="5">
+                           <i class="ion-ios-upload-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
+                           <span class="itemDot itemDot6" data-tab="6">
+                           <i class="ion-ios-briefcase-outline"></i>
+                           <span class="forActive"></span>
+                           </span>
                         </div>
-                        <button type="submit" class="button mb-2">Search</button>
-                     </form>
+                        <div class="contentCircle">
+                           <div class="CirItem title-box active CirItem1">
+                              <h2 class="title"><span>Automate</span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-timer-outline"></i>
+                           </div>
+                           <div class="CirItem title-box CirItem2">
+                              <h2 class="title"><span>Chat </span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-chatboxes-outline"></i>
+                           </div>
+                           <div class="CirItem title-box CirItem3">
+                              <h2 class="title"><span>Responses</span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-person-outline"></i>
+                           </div>
+                           <div class="CirItem title-box CirItem4">
+                              <h2 class="title"><span>Tags</span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-pricetags-outline"></i>
+                           </div>
+                           <div class="CirItem title-box CirItem5">
+                              <h2 class="title"><span>Sharing</span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-upload-outline"></i>
+                           </div>
+                           <div class="CirItem title-box CirItem6">
+                              <h2 class="title"><span>Support</span></h2>
+                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                              <i class="ion-ios-briefcase-outline"></i>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-7 col-md-12 text-center">
+                     <img class="img-fluid feature-image" src="https://ik.imagekit.io/m52sq26n4h/services/insightful-cross-selling.png" alt="image"> 
                   </div>
                </div>
+            </div>
+         <section class="half-margin">
+            <div class="features-projects-completed mt-5">
+               <h1>Over 9000 Projects Completed</h1>
+               <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                <div class="row mt-5">
-                  <div class="col-lg-4 col-sm-12">
-                     <div class="title-box mt-5">
-                        <h3 class="title text-dark">Top <span>Searches</span></h3>
-                        <ul class="list-group list-group-flush mt-4">
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">It is a long established fact</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">That a reader will be distracted</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">Contrary to popular belief.</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">There are many variations</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">If you are going to use a passage</a></li>
-                        </ul>
-                     </div>
+                  <div class="col-4">
+                     <h1>2500+</h1>
+                     <h3>Clients</h3>
                   </div>
-                  <div class="col-lg-4 col-sm-12">
-                     <div class="title-box mt-5">
-                        <h3 class="title text-dark">New <span>Searches</span></h3>
-                        <ul class="list-group list-group-flush mt-4">
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">It is a long established fact</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">That a reader will be distracted</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">Contrary to popular belief.</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">There are many variations</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">If you are going to use a passage</a></li>
-                        </ul>
-                     </div>
+                  <div class="col-4">
+                     <h1>$100M+</h1>
+                     <h3>Revenue</h3>
                   </div>
-                  <div class="col-lg-4 col-sm-12">
-                     <div class="title-box mt-5">
-                        <h3 class="title text-dark"><span>Troubleshooting</span></h3>
-                        <ul class="list-group list-group-flush mt-4">
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">It is a long established fact</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">That a reader will be distracted</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">Contrary to popular belief.</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">There are many variations</a></li>
-                           <li class="list-group-item pt-2 pb-2 pl-0"><a href="#">If you are going to use a passage</a></li>
-                        </ul>
-                     </div>
+                  <div class="col-4">
+                     <h1>150+</h1>
+                     <h3>Employees</h3>
                   </div>
                </div>
             </div>
          </section>
+         <section>
+            <div class="container">
+               <div class="row justify-content-md-center mb-3">
+                  <div class="col-lg-9 col-sm-12 text-center mt-5">
+                     <div class="title-box">
+                        <h2 class="title text-dark">We Connect with your <span>Favorite Channels</span></h2>
+                     </div>
+                  </div>
+                  <div class="col-lg-12 col-md-12 mt-5 mb-5 text-center">
+                     <img class="img-fluid top-img1 w-50" src="images/works/channels.png" alt="image">
+                  </div>
+               </div>
+               <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center mt-5">
+                     <div class="title-box">
+                        <h2 class="title text-dark">And Integrate with <span>Everyone</span></h2>
+                     </div>
+                  </div>
+                  <div class="col-lg-12 col-md-12 mt-5 text-center">
+                     <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
+                  </div>
+                  <div class="title-box mt-3">
+                     <h3 class="title-light text-dark">along with so <span> many more!</span></h3>
+                  </div>
+               </div>
+            </div>
+
+         </section>
+         <section class="companies">
+              <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center">
+                      <div class="title-box">
+                          <h2 class="title text-dark">Ready to get <span>Started?</span></h2>
+                          <p class="mt-2">Get in touch or create an account.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="row justify-content-md-center">
+                  <div class="col-lg-8 col-sm-12 text-center">
+                      <div>
+                          <a class="button" href="contact-us.html">Request a demo</a>
+                      </div>
+                  </div>
+              </div>
+              
+
+            <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
+          </section>
+
          <!--=================================
-            Support -->
+            Features -->
       </div>
       <!--=================================
          MAIN CONTENT -->
-            
