--- a/sales.html
+++ b/sales.html
@@ -7,12 +7,12 @@ layout: page
          <div class="container">
             <div class="row align-items-center">
                <div class="col-md-6 col-sm-12">
-                  <h1 class="title">Features</h1>
+                  <h1 class="title">Sales</h1>
                </div>
                <div class="col-md-6 col-sm-12 text-right">
                   <ul>
                      <li class="d-inline"><a href="index.html">Home</a></li>
-                     <li class="d-inline active">Features</li>
+                     <li class="d-inline active">Sales</li>
                   </ul>
                </div>
             </div>
@@ -31,7 +31,7 @@ layout: page
                <div class="row align-items-center features-demo">
                   <div class="col-lg-6 col-md-12 mt-5">
                      <div class="title-box">
-                        <h1 class="title text-dark">Get Those Window Shoppers Interested</h1>
+                        <h2 class="title text-dark">Get Those <span>Window Shoppers</span> Interested</h2>
                      </div>
                      <p class="mt-4">Get 18% more online conversions</p>
                      <a class="button grey mt-2" href="#" role="button">Get Demo</a>
