Cleaned up Demo Page

--- a/contact-us.html
+++ b/contact-us.html
@@ -12,7 +12,7 @@ layout: page
                <div class="col-md-6 col-sm-12 text-right">
                   <ul>
                      <li class="d-inline"><a href="index.html">Home</a></li>
-                     <li class="d-inline active">Contact Us</li>
+                     <li class="d-inline active">Get Demo</li>
                   </ul>
                </div>
             </div>
@@ -70,8 +70,7 @@ layout: page
                      </div>
                   </div>
                   <div class="col-lg-6 r-mt3">
-                     <div class="contact-bg">
-                        <h2>Contact Info</h2>
+                     <div>
                         <div class="row">
                            <div class="col-sm-12">
                               <ul class="iq-contact text-white">
@@ -82,7 +81,7 @@ layout: page
                               </ul>
                            </div>
                            <div class="col-sm-12">
-                              <img src="images/contact/demo.svg" style="width: 100%;">
+                              <img src="images/contact/2.svg" style="width: 100%;">
                            </div>
                         </div>
                      </div>
