--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: page
 <!--=================================
          MAIN CONTENT -->
 <div class="main-content">
-    <section class="companies">
+    <section class="companies container">
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
@@ -148,7 +148,7 @@ layout: page
     <!--=================================
             About Us -->
 
-    <section class="companies">
+    <section class="companies container">
         <div class="row justify-content-md-center">
             <div class="col-lg-8 col-sm-12 text-center">
                 <div class="title-box">
@@ -210,6 +210,7 @@ layout: page
     }
     .company-images img{
         height: 85px;
+        max-width: 100%;
         padding: 15px;
         filter: grayscale(100%);
         opacity: .8;
