--- a/sales.html
+++ b/sales.html
@@ -31,7 +31,7 @@ layout: page
                <div class="row align-items-center features-demo">
                   <div class="col-lg-6 col-md-12 mt-5">
                      <div class="title-box">
-                        <h2 class="title text-dark">Get Those <span>Window Shoppers</span> Interested</h2>
+                        <h5 class="title text-dark">Get Those <span>Window Shoppers</span> Interested</h5>
                      </div>
                      <p class="mt-4">Get 18% more online conversions</p>
                      <a class="button grey mt-2" href="#" role="button">Get Demo</a>
@@ -48,7 +48,7 @@ layout: page
                      <p class="mt-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                   </div>
                </div>
-               <div class="row align-items-center">
+               <div class="row align-items-center" style="overflow: hidden;">
                   <div class="col-lg-5 col-md-12">
                      <div class="holderCircle">
                         <div class="round"></div>
@@ -117,6 +117,7 @@ layout: page
                   </div>
                </div>
             </div>
+         </section>
          <section class="half-margin">
             <div class="features-projects-completed mt-5">
                <h1>Over 9000 Projects Completed</h1>
@@ -158,14 +159,14 @@ layout: page
                   <div class="col-lg-12 col-md-12 mt-5 text-center">
                      <img class="img-fluid top-img1 w-75" src="images/works/integrations.png" alt="image">
                   </div>
-                  <div class="title-box mt-3">
+                  <div class="col-sm-12    title-box mt-3 text-center">
                      <h3 class="title-light text-dark">along with so <span> many more!</span></h3>
                   </div>
                </div>
             </div>
 
          </section>
-         <section class="companies">
+         <section class="companies container">
               <div class="row justify-content-md-center">
                   <div class="col-lg-8 col-sm-12 text-center">
                       <div class="title-box">
@@ -184,7 +185,7 @@ layout: page
               
 
             <!-- <div class="bg"><img src="images/banner/companies.png" alt="img" style="width: 100%;" /></div> -->
-          </section>
+         </section>
 
          <!--=================================
             Features -->
