--- a/sales.html
+++ b/sales.html
@@ -54,66 +54,72 @@ layout: page
                         <div class="round"></div>
                         <div class="dotCircle">
                            <span class="itemDot active itemDot1" data-tab="1">
-                           <i class="ion-ios-timer-outline"></i>
+                           1
+                           <!-- <i class="ion-ios-timer-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                            <span class="itemDot itemDot2" data-tab="2">
-                           <i class="ion-ios-chatboxes-outline"></i>
+                           2
+                           <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                            <span class="itemDot itemDot3" data-tab="3">
-                           <i class="ion-ios-person-outline"></i>
+                           3
+                           <!-- <i class="ion-ios-person-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                            <span class="itemDot itemDot4" data-tab="4">
-                           <i class="ion-ios-pricetags-outline"></i>
+                           4
+                           <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                            <span class="itemDot itemDot5" data-tab="5">
-                           <i class="ion-ios-upload-outline"></i>
+                           5
+                           <!-- <i class="ion-ios-upload-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                            <span class="itemDot itemDot6" data-tab="6">
-                           <i class="ion-ios-briefcase-outline"></i>
+                           6
+                           <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            <span class="forActive"></span>
                            </span>
                         </div>
                         <div class="contentCircle">
                            <div class="CirItem title-box active CirItem1">
-                              <h2 class="title"><span>Automate</span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-timer-outline"></i>
+                              <h2 class="title"><span>Assist Product Discovery</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-timer-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem2">
-                              <h2 class="title"><span>Chat </span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-chatboxes-outline"></i>
+                              <h2 class="title"><span>Answer Product Queries </span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-chatboxes-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem3">
-                              <h2 class="title"><span>Responses</span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-person-outline"></i>
+                              <h2 class="title"><span>Offer Personalised Discounts</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-person-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem4">
-                              <h2 class="title"><span>Tags</span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-pricetags-outline"></i>
+                              <h2 class="title"><span>Cross Sell & Up Sell</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-pricetags-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem5">
-                              <h2 class="title"><span>Sharing</span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-upload-outline"></i>
+                              <h2 class="title"><span>Show Social Proof</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-upload-outline"></i> -->
                            </div>
                            <div class="CirItem title-box CirItem6">
-                              <h2 class="title"><span>Support</span></h2>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                              <i class="ion-ios-briefcase-outline"></i>
+                              <h2 class="title"><span>Qualify Potential Leads</span></h2>
+                              <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> -->
+                              <!-- <i class="ion-ios-briefcase-outline"></i> -->
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="col-lg-7 col-md-12 text-center">
-                     <img class="img-fluid feature-image" src="https://ik.imagekit.io/m52sq26n4h/services/insightful-cross-selling.png" alt="image"> 
+                     <img class="img-fluid feature-image" src="images/features/1.png" alt="image"> 
                   </div>
                </div>
             </div>
