--- a/contact-us.html
+++ b/contact-us.html
@@ -32,7 +32,7 @@ layout: page
                   <div class="col-lg-6">
                      <div class="contact-box">
                         <h3>Get in Touch</h3>
-                        <form class="p-0" id="contact">
+                        <form class="p-0" id="contact" method="POST" action="send.php">
                            <div class="contact-form mt-4">
                               <div class="row">
                                  <div class="col-lg-6 col-sm-12 mb-3">
