--- a/sales.html
+++ b/sales.html
@@ -124,20 +124,20 @@ layout: page
                </div>
             </div>
          </section>
-         <section class="half-margin">
+         <section class="container">
             <div class="features-projects-completed mt-5">
                <h1>Over 9000 Projects Completed</h1>
                <p class="mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                <div class="row mt-5">
-                  <div class="col-4">
+                  <div class="col-md-4">
                      <h1>2500+</h1>
                      <h3>Clients</h3>
                   </div>
-                  <div class="col-4">
+                  <div class="col-md-4">
                      <h1>$100M+</h1>
                      <h3>Revenue</h3>
                   </div>
-                  <div class="col-4">
+                  <div class="col-md-4">
                      <h1>150+</h1>
                      <h3>Employees</h3>
                   </div>
