Fixed Aniket LinkedIn Link

--- a/about-us.html
+++ b/about-us.html
@@ -104,7 +104,7 @@ layout: page
                                        <img class="img-fluid team-2" src="https://ik.imagekit.io/m52sq26n4h/team_images/aniket.png" alt="">
                                     </div>
                                     <div class="mt-3 text-center">
-                                       <a href="https://www.linkedin.com/in/nikhilgupta1997/">
+                                       <a href="https://www.linkedin.com/in/aniket-bajpai/">
                                           <h5 class="title">Aniket Bajpai</h5>
                                        </a>
                                        <p>Co-Founder</p>
